--- a/package.json
+++ b/package.json
@@ -1,30 +1,18 @@
 {
-  "name": "deploy",
-  "version": "1.0.0",
-  "description": "sample",
-  "main": "server.js",
-  "dependencies": {
-    "express": "^4.16.4"
-  },
-  "engines": {
-    "node": "10.x"
-  },
-  "devDependencies": {},
+  "name": "back-end",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/oTrolado/deploy.git"
-  },
-  "keywords": [
-    "deploy"
-  ],
-  "author": "Gabriel Carvalho",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/oTrolado/deploy/issues"
-  },
-  "homepage": "https://gaia-smn.herokuapp.com/"
+  "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
+    "cookie-parser": "~1.4.3",
+    "cors": "^2.8.5",
+    "debug": "~2.6.9",
+    "express": "~4.16.0",
+    "md5": "^2.2.1",
+    "mongoose": "^5.4.19",
+    "morgan": "~1.9.0"
+  }
 }
