--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.16.0",
     "md5": "^2.2.1",
     "mongoose": "^5.4.19",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "node-schedule": "^1.3.2"
   }
 }
