--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "md5": "^2.2.1",
     "mongoose": "^5.4.19",
     "morgan": "~1.9.0",
-    "node-schedule": "^1.3.2"
+    "node-schedule": "^1.3.2",
+    "socket.io": "^2.2.0"
   }
 }
