--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "jsonwebtoken": "^8.5.1",
     "md5": "^2.2.1",
     "mongoose": "^5.4.19",
     "morgan": "~1.9.0",
     "node-schedule": "^1.3.2",
+    "promisify": "^0.0.3",
     "socket.io": "^2.2.0"
   }
 }
